pushing to heroku

--- a/street/templates/registration/login.html
+++ b/street/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base.html' %} 
+{% extends 'base.html' %} 
 {% load bootstrap4 %} 
 {% block content %}
 <div class="container">
@@ -23,7 +23,7 @@
                     </form>
                 </div>
 
-                <p class="forgot">Forgot Password?</p>
+                <p class="forgot">Forgot Password? You Naughty</p>
             </div>
             <div class="section">
                 <p class="forgot">Don't have an account?
