--- a/street/templates/registration/signup.html
+++ b/street/templates/registration/signup.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base.html' %} 
+{% extends 'base.html' %} 
 
 {% load bootstrap4 %} 
 
@@ -31,7 +31,7 @@
                 </div>
                 <div class="section">
                     <p class="log forgot">Have an account?
-                        <!-- <a href="/accounts/login/">Log in</a> -->
+                        <a href="/accounts/login/">Log in</a>
                     </p>
                 </div>
             </div>
